# finsentiment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: copilot-review.yml
configs/: qlora_mistral7b.yaml
scripts/: evaluate.py  scripts.py  train.py
src/finsentiment/: config.py
src/finsentiment/data/: dataset.py
src/finsentiment/evaluation/: metrics.py
src/finsentiment/inference/: predictor.py
src/finsentiment/model/: loader.py  loras.py
src/finsentiment/training/: trainer.py
tests/: test_config.py
