[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "finsentiment"
version = "0.1.0"
description = "QLoRA fine-tuning for financial sentiment analysis"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "datasets",
]

[tool.setuptools.packages.find]
where = ["src"]